# genezio-rag

./: .env.example  genezio.yaml  main.py  main_fastapi.py  pyproject.toml  requirements.txt  search.py
frontend/genezio-rag/components/: rag-dashboard.tsx
new_retrieval/: reranker.py  run.py
